--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 }
 
 .logo {
-    width: 125px;
+    width: 100px;
     height: auto; 
 }
 
@@ -91,4 +91,8 @@ body {
 #rodape {
     background-color: #8b0000;
     color: #ffffff;
+}
+
+section {
+    scroll-margin-top: 105px;
 }
